--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "round-flag-icons",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "css/round-flag-icons.css",
   "files": [
     "css",
@@ -11,6 +11,6 @@
   "author": "mufeng <mufeng.me@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "upgrade-icons": "git pull --recurse-submodules && cp -R circle-flags/flags ."
+    "upgrade-icons": "git submodule update --recursive --remote && cp -R circle-flags/flags ."
   }
 }
